--- a/index.html
+++ b/index.html
@@ -10,30 +10,15 @@
 </head>
 <body>
 
-<div class="container">
 
-    <div class="row" id="nav-container"></div>
+    <h1>DØK QUIZ!</h1>
 
-    <div class="row">
-        <div>
-            <div>
-                <h1>DØK QUIZ!</h1>
-                <div></div>
-            </div>
-            <div>
-                <label class="control-label" for="inputUsername">Brugernavn</label>
-                <input type="username" class="form-control" id="inputUsername" placeholder="Brugernavn">
-            </div>
-            <div class="form-group">
-                <label class="control-label" for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-            </div>
-            <button id="signup-button">Opret bruger</button>
-            <button id="login-button">Log ind!</button>
-        </div>
+    <div>
+        <button id="signup-button">Opret bruger</button>
+        <button id="login-button">Log ind!</button>
     </div>
 
-</div>
+
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
@@ -42,7 +27,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/login.js"></script>
+<script src="../js/login.js"></script>
 
 </body>
 </html>
