changing html index file (layout)

--- a/index.html
+++ b/index.html
@@ -10,13 +10,32 @@
 </head>
 <body>
 
+<div class="container">
 
-    <h1>DØK QUIZ!</h1>
+    <div class="row" id="nav-container">
 
-    <div>
-        <button id="signup-button">Opret bruger</button>
-        <button id="login-button">Log ind!</button>
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="page-header">
+                    <h1>Login</h1>
+                    <div id="load-test"></div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputUsername">Username</label>
+                    <input type="text" class="form-control" id="inputUsername" placeHolder="Username">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputPassword">Password</label>
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                </div>
+                <button id="signup-button">Opret bruger</button>
+                <button id="login-button">Log ind!</button>
+            </div>
+        </div>
+
     </div>
+
+</div>
 
 
 
@@ -27,7 +46,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="../js/login.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
