sign up function works

--- a/user.html
+++ b/user.html
@@ -3,11 +3,11 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>MyPage</title>
+    <title>User</title>
 </head>
 <body>
 
-<h1>HEEEEJ!!!</h1>
+<h1>User</h1>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
@@ -16,7 +16,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/myPage.js"></script>
+<script src="js/user.js"></script>
 
 </body>
 </html>
