--- a/signUp.html
+++ b/signUp.html
@@ -2,13 +2,44 @@
 <html lang="en">
 <head>
 
+    <link rel="stylesheet" href="lib/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 
-<h1>Sign up!</h1>
+<div class="container">
 
+    <div class="row" id="nav-container">
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="page-header">
+                    <h1>Sign-up</h1>
+                    <div id="load-test"></div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="username">Username</label>
+                    <input type="text" class="form-control" id="username" placeHolder="Username">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="passwordV">Verify password</label>
+                    <input type="password" class="form-control" id="passwordV" placeholder="Verify Password">
+                </div>
+                <button id="return-button">Tilbage</button>
+                <button id="create-button">Opret bruger</button>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
