--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
                     <h1>Login</h1>
                     <div id="load-test"></div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="inputUsername">Username</label>
-                    <input type="text" class="form-control" id="inputUsername" placeHolder="Username">
+                <div class="jumbotron">
+                    <div class="form-group">
+                        <label class="control-label" for="inputUsername">Username</label>
+                        <input type="text" class="form-control" id="inputUsername" placeHolder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="inputPassword">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                    <button id="signup-button">Opret bruger</button>
+                    <button id="login-button">Log ind!</button>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="inputPassword">Password</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                </div>
-                <button id="signup-button">Opret bruger</button>
-                <button id="login-button">Log ind!</button>
             </div>
         </div>
 
