--- a/signUp.html
+++ b/signUp.html
@@ -20,20 +20,22 @@
                     <h1>Sign-up</h1>
                     <div id="load-test"></div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="username">Username</label>
-                    <input type="text" class="form-control" id="username" placeHolder="Username">
+                <div class="jumbotron">
+                    <div class="form-group">
+                        <label class="control-label" for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeHolder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="passwordV">Verify password</label>
+                        <input type="password" class="form-control" id="passwordV" placeholder="Verify Password">
+                    </div>
+                    <button id="return-button">Tilbage</button>
+                    <button id="create-button">Opret bruger</button>
                 </div>
-                <div class="form-group">
-                    <label class="control-label" for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="passwordV">Verify password</label>
-                    <input type="password" class="form-control" id="passwordV" placeholder="Verify Password">
-                </div>
-                <button id="return-button">Tilbage</button>
-                <button id="create-button">Opret bruger</button>
             </div>
         </div>
 
