login works with tokens sign out works, removes token

--- a/user.html
+++ b/user.html
@@ -9,6 +9,8 @@
 
 <h1>User</h1>
 
+<button id="logOut-button">Log ud</button>
+
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
 </footer>
