--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
 
 <div class="container">
-
     <div class="row" id="nav-container">
-
         <div class="row">
             <div class="col-lg-6">
                 <div class="page-header">
@@ -22,24 +20,20 @@
                 </div>
                 <div class="jumbotron">
                     <div class="form-group">
-                        <label class="control-label" for="inputUsername">Username</label>
-                        <input type="text" class="form-control" id="inputUsername" placeHolder="Username">
+                        <label class="control-label" for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeHolder="Username">
                     </div>
                     <div class="form-group">
-                        <label class="control-label" for="inputPassword">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        <label class="control-label" for="password">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
                     <button id="signup-button">Opret bruger</button>
                     <button id="login-button">Log ind!</button>
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
-
-
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
