Added structure: HTML and js for User

--- a/userQuiz.html
+++ b/userQuiz.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>User</title>
+    <title>Take Quiz!</title>
 </head>
 <body>
 
 <div class="container">
     <div class="row" id="nav-container">
-        <h1>User</h1>
+        <h1>User Quiz</h1>
         <button id="profile-button">Profil</button>
         <button id="result-button">Results</button>
         <button id="quiz-button">Quizzes</button>
@@ -28,7 +28,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/user.js"></script>
+<script src="js/userQuiz.js"></script>
 
 </body>
 </html>
