--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/user.js"></script>
+<script src="js/admin.js"></script>
 
 </body>
 </html>
