--- a/userQuiz.html
+++ b/userQuiz.html
@@ -9,16 +9,13 @@
     <title>Take Quiz!</title>
 </head>
 <body>
-
+<div id="nav-container"></div>
 <div class="container">
-    <div class="row" id="nav-container">
         <h1>User Quiz</h1>
         <button id="profile-button">Profil</button>
         <button id="result-button">Results</button>
         <button id="quiz-button">Quizzes</button>
         <button id="logOut-button">Log ud</button>
-
-    </div>
 </div>
 
 <footer class="footer" align="center">
@@ -29,6 +26,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/userQuiz.js"></script>
+<script> SDK.loadNav();</script>
 
 </body>
 </html>
