--- a/navAdmin.html
+++ b/navAdmin.html
@@ -21,6 +21,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="quiz.html"><b>Quiz!<span class="sr-only">(current)</span></b></a></li>
+                <li class="active"><a href="quiz.html"><b>Quiz!<span class="sr-only">(current)</span></b></a></li>
+                <li class="active"><a href="quiz.html"><b>Quiz!<span class="sr-only">(current)</span></b></a></li>
+                <li class="active"><a href="quiz.html"><b>Quiz!<span class="sr-only">(current)</span></b></a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#LogOut-button">Log out</a></li>
