--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <title>Quiz</title>
 </head>
 <body>
-
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand">DØKquiz</a>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <div class="row" id="nav-container">
         <div class="row">
