--- a/signUp.html
+++ b/signUp.html
@@ -10,7 +10,13 @@
 
 </head>
 <body>
-
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand">DØKquiz</a>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <div class="row" id="nav-container">
         <div class="row">
