--- a/userQuiz.html
+++ b/userQuiz.html
@@ -9,13 +9,26 @@
     <title>Take Quiz!</title>
 </head>
 <body>
-<div id="nav-container"></div>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand">DØKquiz</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="user.html">Profile</a></li>
+                <li class="active"><a href="userQuiz.html"><b>Quiz!</b></a></li>
+                <li><a href="userResult.html">Result</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#" id="logOut-button">Log out</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container">
-        <h1>User Quiz</h1>
-        <button id="profile-button">Profil</button>
-        <button id="result-button">Results</button>
-        <button id="quiz-button">Quizzes</button>
-        <button id="logOut-button">Log ud</button>
+    <h1>Choose a quiz...</h1>
+    <table><tbody id="courseList"></tbody></table>
 </div>
 
 <footer class="footer" align="center">
@@ -26,7 +39,6 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/userQuiz.js"></script>
-<script> SDK.loadNav();</script>
 
 </body>
 </html>
