Print courses & print quizzes

--- a/adminDIS.html
+++ b/adminDIS.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>Distribuerede systemer</title>
+    <title>quiz</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -28,8 +27,10 @@
     </div>
 </nav>
 <div class="container">
-    <h1>Admin</h1>
-    <table><tbody id="courseList"></tbody></table>
+    <div class="page-header"></div>
+    <table class="table" id="tablehead">
+        <tbody id="quizList"></tbody>
+    </table>
 </div>
 
 <footer class="footer" align="center">
@@ -39,7 +40,6 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/admin.js"></script>
-
+<script src="js/adminDIS.js"></script>
 </body>
 </html>
