--- a/user.html
+++ b/user.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="user.html">Profile</a></li>
-                <li><a href="userQuiz.html"><b>Quiz!</b></a></li>
+                <li><a href="userCourse.html"><b>Quiz!</b></a></li>
                 <li><a href="userResult.html">Result</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
