--- a/userQuiz.html
+++ b/userQuiz.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="user.html">Profile</a></li>
-                <li class="active"><a href="userQuiz.html"><b>Quiz!</b></a></li>
+                <li class="active"><a href="userCourse.html"><b>Quiz!</b></a></li>
                 <li><a href="userResult.html">Result</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -26,9 +26,11 @@
         </div>
     </div>
 </nav>
-<div class="container">
+<div  class="container">
     <h1>Choose a quiz...</h1>
-    <table><tbody id="courseList"></tbody></table>
+    <table class="table" id="tablehead">
+        <tbody id="quizList"></tbody>
+    </table>
 </div>
 
 <footer class="footer" align="center">
