delete quiz does not work 100%

--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
-
     <meta charset="UTF-8">
-    <title>Distribuerede systemer</title>
+    <title>Quizzes</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -15,7 +13,7 @@
             <a class="navbar-brand" href="admin.html">DIS Bookstore 2017</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" >
                 <li><a href="#" id="dis-button">Distribuerede systemer</a></li>
                 <li><a href="#" id="itf-button">Forandringsledelse</a></li>
                 <li><a href="#" id="makro-button">Makroøkonomi</a></li>
