--- a/adminQuiz.html
+++ b/adminQuiz.html
@@ -3,7 +3,6 @@
 <head>
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
-
     <meta charset="UTF-8">
     <title>quiz</title>
 </head>
@@ -40,6 +39,6 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/adminDIS.js"></script>
+<script src="js/adminQuiz.js"></script>
 </body>
 </html>
