--- a/signUp.html
+++ b/signUp.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
-
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>Sign up</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
