--- a/adminQuiz.html
+++ b/adminQuiz.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="admin.html">DIS Bookstore 2017</a>
+            <a class="navbar-brand">DIS Bookstore 2017</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
                 <li><a href="#" id="vos-button">VØS 3: Finansiering</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="logOut-button">Log out</a></li>
+                <li><a href="#" id="logOut-button">Log ud</a></li>
             </ul>
         </div>
     </div>
