--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -28,9 +28,10 @@
 </nav>
 <div  class="container">
     <h1 class="page-header"></h1>
-    <table class="table">
+    <table class="table table-striped table-hover" id="questionHead">
         <tbody id="questionList"></tbody>
     </table>
+    <table id="optionBody"></table>
 </div>
 
 <footer class="footer" align="center">
