--- a/adminCreateQ.html
+++ b/adminCreateQ.html
@@ -85,9 +85,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="addQuestionButton">Add question</button>
-                        <button type="button" class="btn btn-primary" id="saveChangesButton">Go to quiz</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="addQuestion-button">+ Add question</button>
+                        <button type="button" class="btn btn-primary" id="saveQuiz-button">Finish quiz!</button>
                     </div>
                 </div>
             </div>
