created admin.js again, deleted question count and added isCorrect to options

--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta charset="UTF-8">
-    <title>quiz</title>
+    <title>Welcome</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -26,10 +26,7 @@
     </div>
 </nav>
 <div class="container">
-    <div class="page-header"></div>
-    <table class="table" id="tablehead">
-        <tbody id="quizList"></tbody>
-    </table>
+    <h1>Hej</h1>
 </div>
 
 <footer class="footer" align="center">
@@ -39,6 +36,6 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/adminQuiz.js"></script>
+<script src="js/admin.js"></script>
 </body>
 </html>
