--- a/adminCreateQ.html
+++ b/adminCreateQ.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand">DIS Bookstore 2017</a>
+            <a class="navbar-brand" href="admin.html">DIS Bookstore 2017</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
