applied ÆØÅ and created adminNav.js for navbar function

--- a/signUp.html
+++ b/signUp.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
     <meta charset="UTF-8">
     <title>Sign up</title>
 </head>
