--- a/userCourse.html
+++ b/userCourse.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <meta charset="UTF-8">
     <title>Take Quiz!</title>
