--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
     <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
@@ -10,7 +12,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="admin.html">DIS Bookstore 2017</a>
+            <a class="navbar-brand" href="admin.html">DØKquiz</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
@@ -37,5 +39,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/admin.js"></script>
+<script src="js/adminNav.js"></script>
+
 </body>
 </html>
