--- a/userResult.html
+++ b/userResult.html
@@ -4,6 +4,8 @@
 
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
 
     <meta charset="UTF-8">
     <title>Quiz Results</title>
