--- a/admin.html
+++ b/admin.html
@@ -4,27 +4,23 @@
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <meta charset="UTF-8">
     <title>Welcome</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="admin.html">DØKquiz</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#" id="dis-button">Distribuerede systemer</a></li>
-                <li><a href="#" id="itf-button">Forandringsledelse</a></li>
-                <li><a href="#" id="makro-button">Makroøkonomi</a></li>
-                <li><a href="#" id="vos-button">VØS 3: Finansiering</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" id="logOut-button">Log ud</a></li>
-            </ul>
-        </div>
+    <div class="navbar-header">
+        <a class="navbar-brand" href="admin.html">DØKquiz</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li><a href="#" id="disBtn">Distribuerede systemer</a></li>
+            <li><a href="#" id="itfBtn">Forandringsledelse</a></li>
+            <li><a href="#" id="makroBtn">Makroøkonomi</a></li>
+            <li><a href="#" id="vosBtn">VØS 3: Finansiering</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#" id="logOutBtn">Log out</a></li>
+        </ul>
     </div>
 </nav>
 <div class="container">
@@ -32,7 +28,7 @@
 </div>
 
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
