--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <meta charset="UTF-8">
-    <title>Quiz</title>
+    <title>DøkQuiz</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -17,38 +15,32 @@
     </div>
 </nav>
 <div class="container">
-    <div class="row" id="nav-container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="page-header">
-                    <h1>Login</h1>
-                    <div id="load-test"></div>
-                </div>
-                <div class="jumbotron">
-                    <div class="form-group">
-                        <label class="control-label" for="username">Username</label>
-                        <input type="text" class="form-control" id="username" placeHolder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                    <button id="signup-button">Opret bruger</button>
-                    <button id="login-button">Log ind!</button>
-                </div>
+    <div class="col-lg-6">
+        <div class="page-header"><h1>Login</h1></div>
+        <div class="jumbotron">
+            <div class="form-group">
+                <label class="control-label" for="username">Username</label>
+                <input type="text" class="form-control" id="username" placeHolder="Username">
             </div>
+            <div class="form-group">
+                <label class="control-label" for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <button class="btn btn-default" id="signUpBtn">Create new user</button>
+            <button class="btn btn-default" id="logInBtn">Log in!</button>
         </div>
     </div>
 </div>
 
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/index.js"></script>
+<script src="js/signUp.js"></script>
 
 </body>
 </html>
