--- a/signUp.html
+++ b/signUp.html
@@ -4,8 +4,6 @@
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <meta charset="UTF-8">
     <title>Sign up</title>
 </head>
 <body>
@@ -17,36 +15,29 @@
     </div>
 </nav>
 <div class="container">
-    <div class="row" id="nav-container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="page-header">
-                    <h1>Sign-up</h1>
-                    <div id="load-test"></div>
-                </div>
-                <div class="jumbotron">
-                    <div class="form-group">
-                        <label class="control-label" for="username">Username</label>
-                        <input type="text" class="form-control" id="username" placeHolder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="password">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="passwordV">Verify password</label>
-                        <input type="password" class="form-control" id="passwordV" placeholder="Verify Password">
-                    </div>
-                    <button id="return-button">Tilbage</button>
-                    <button id="create-button">Opret bruger</button>
-                </div>
+    <div class="col-lg-6">
+        <div class="page-header"><h1>Sign-up</h1></div>
+        <div class="jumbotron">
+            <div class="form-group">
+                <label class="control-label" for="username">Username</label>
+                <input type="text" class="form-control" id="username" placeHolder="Username">
             </div>
+            <div class="form-group">
+                <label class="control-label" for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label class="control-label" for="passwordV">Verify password</label>
+                <input type="password" class="form-control" id="passwordV" placeholder="Verify Password">
+            </div>
+            <button class="btn btn-default" id="returnBtn">Cancel</button>
+            <button class="btn btn-default" id="createBtn">Create user</button>
         </div>
     </div>
 </div>
 
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
