tried to make 'take quiz' work

--- a/admin.html
+++ b/admin.html
@@ -23,8 +23,17 @@
         </ul>
     </div>
 </nav>
+
 <div class="container">
-    <h1>Hej</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="jumbotron">
+                <h1 class="display-3">Welcome</h1>
+                <p class="lead">Choose your course to see all created quizzes within the specific course.</p>
+                <hr class="my-4">
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer class="footer" align="center">
