--- a/adminCreateQ.html
+++ b/adminCreateQ.html
@@ -82,6 +82,7 @@
         </div>
     </div>
 </div>
+<div><h1></h1></div>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - DØKquiz Inc.</p>
