--- a/adminQuiz.html
+++ b/adminQuiz.html
@@ -25,10 +25,13 @@
 </nav>
 <div class="container">
     <div class="page-header"></div>
-    <table class="table" id="tablehead">
-        <tbody id="quizList"></tbody>
-    </table>
+    <div class="jumbotron">
+        <table class="table" id="tablehead">
+            <tbody id="quizList"></tbody>
+        </table>
+    </div>
 </div>
+<div><h1></h1></div>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - DØKquiz Inc.</p>
