--- a/user.html
+++ b/user.html
@@ -30,13 +30,13 @@
 </nav>
 
 <div class="container">
-        <h1>My profile:</h1>
-    <table style="width: 450px;">
-        <tr><td style="width: 100px;"><h1><span class="glyphicon glyphicon-user"></h1></td><td></td><td></td>
-        <tr><td></td><td><h5>Username:</h5></td><td class="myUser"></td></tr>
-        <tr><td></td><td><h5>Password:</h5></td><td><h5>******</h5></td></tr><tr></tr>
-        <tr><td></td><td></td><td height="100" style="width: 250px;"><button>Change password</button></td></tr>
-    </table>
+    <div class="jumbotron">
+        <table><tr><td style="width: 100px;"><h1><span class="glyphicon glyphicon-user"></h1></td><td><h1>Profile</h1></td></table>
+        <table style="width: 150px;">
+            <tr><td><h5>Username:</h5></td><td class="myUser"></td></tr>
+            <tr><td><h5>Password:</h5></td><td><h5>******</h5></td></tr><tr></tr>
+        </table>
+    </div>
 </div>
 
 <footer class="footer" align="center">
