--- a/userCourse.html
+++ b/userCourse.html
@@ -28,8 +28,10 @@
     </div>
 </nav>
 <div class="container">
+    <div class="jumbotron">
     <h1>Choose a course...</h1>
-    <table><tbody id="courseList"></tbody></table>
+    <table align="center"><tbody id="courseList"></tbody></table>
+    </div>
 </div>
 
 <footer class="footer" align="center">
