--- a/userQuiz.html
+++ b/userQuiz.html
@@ -27,12 +27,15 @@
         </div>
     </div>
 </nav>
-<div  class="container">
+<div class="container">
     <h1>Choose a quiz...</h1>
-    <table class="table" id="tablehead">
-        <tbody id="quizList"></tbody>
-    </table>
+    <div class="jumbotron">
+        <table class="table" id="tablehead">
+            <tbody id="quizList"></tbody>
+        </table>
+    </div>
 </div>
+<div><h1></h1></div>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
