--- a/userResult.html
+++ b/userResult.html
@@ -31,6 +31,7 @@
 <div class="container">
         <h1>User results</h1>
 </div>
+<div><h1></h1></div>
 
 <footer class="footer" align="center">
     <p>2017 © All rights reserved - Doek Quiz Inc.</p>
