--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link rel="stylesheet" href="lib/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-
-    <meta charset="UTF-8">
-    <title>Quiz Results</title>
+    <title>Quiz</title>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -28,16 +24,21 @@
         </div>
     </div>
 </nav>
-<div  class="container">
+<div class="container">
     <h1 class="page-header"></h1>
-    <table class="table table-striped table-hover" id="questionHead">
-        <tbody id="questionList"></tbody>
-    </table>
-    <table id="optionBody"></table>
+    <h4 class="description"></h4>
+    <div class="jumbotron">
+        <table class="table table-striped table-hover" id="questionHead"></table>
+        <div class="modal-footer">
+            <button class="btn btn-danger" id="returnBtn">Return to quizzes</button>
+            <button class="btn btn-primary" id="saveAnswerBtn">Submit answers</button>
+        </div>
+    </div>
 </div>
 
+<div><h1></h1></div>
 <footer class="footer" align="center">
-    <p>2017 © All rights reserved - Doek Quiz Inc.</p>
+    <p>2017 © All rights reserved - DØKquiz Inc.</p>
 </footer>
 
 <script src="lib/js/jquery-3.2.1.js"></script>
