--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -28,7 +28,9 @@
     <h1 class="page-header"></h1>
     <h4 class="description"></h4>
     <div class="jumbotron">
-        <table class="table table-striped table-hover" id="questionHead"></table>
+        <table class="table table-striped table-hover" id="questionHead">
+            <tbody id="QuestionList"></tbody>
+        </table>
         <div class="modal-footer">
             <button class="btn btn-danger" id="returnBtn">Return to quizzes</button>
             <button class="btn btn-primary" id="saveAnswerBtn">Submit answers</button>
