get result works

--- a/userTakeQuiz.html
+++ b/userTakeQuiz.html
@@ -34,6 +34,7 @@
         <div class="modal-footer">
             <button class="btn btn-danger" id="returnBtn">Return to quizzes</button>
             <button class="btn btn-primary" id="saveAnswerBtn">Submit answers</button>
+            <button class="btn btn-success" id="resultBtn">Show results</button>
         </div>
     </div>
 </div>
